turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:42: error: not found: value levecrayon
	levecrayon
        ^